<resources>
    <string name="app_name">KBFCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="btn_division">\u00f7</string>
    <string name="btn_multiplication">\u00D7</string>
    <string name="btn_signed">\u00B1</string>
    <string name="btn_squared">\u221a</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_percent">%</string>
    <string name="_decimal">.</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_equals">=</string>
    <string name="input_output">Input/Output</string>
    <string name="_0_00">0.00</string>
    <string name="enter_digits_first_exception_sign_ex_2_2">Enter Digits First: Exception - signEx. -2 + -2</string>


</resources>
